# roc-tigerbeetle-demo

./: .gitignore  README.md  build.zig  build.zig.zon  bundle.sh  glue.sh  roc_pin.sh  start_tb.sh  vendor_tb_client.sh
.github/workflows/: ci.yml  release.yml
bench/go/: go.mod  go.sum  go_bench  main.go
bench/roc/: roc_bench.roc
bench/rust/: Cargo.toml  README.md
bench/rust/src/: main.rs
ci/: ROC_COMMIT  all_tests.sh  test_bundled_examples.sh  test_runner.zig
examples/: all_roc_syntax.roc  integration_test.roc  roc_bench.roc  tigerbeetle.roc  tigerbeetle_full.roc
platform/: Host.roc  TigerBeetle.roc  Utc.roc  main.roc
src/: host.zig  marshal_bench.zig  roc_platform_abi.zig  tb_client.zig  tb_host.zig
